# cpublic-sentiment

./: .env.example  .gitattributes  .gitignore  LICENSE  Makefile  PROJECT_GUIDE.md  README.md  docker-compose.ollama.yml  docker-compose.yml  overview.md
backend/: pyproject.toml  requirements.txt
backend/app/: config.py  init_db.py  main.py
backend/app/agents/: __init__.py  base.py  expert.py  governance.py  graph_nodes.py  graph_state.py  jd_parser.py  learning_planner.py  matcher.py  orchestrator.py  predictor.py  prompts.py  scanner.py  skill_advisor.py  talent_matcher.py  trend_predictor.py  workflow.py
backend/app/api/: routes.py  schemas.py
backend/app/crawler/: __init__.py  pipeline.py  scraper.py  sources.py
backend/app/data/: generator.py  init_real_data.py  playbook_knowledge.py  seed.py
backend/app/graph/: __init__.py  skill_graph.py
backend/app/llm/: __init__.py  factory.py
backend/app/models/: __init__.py  base.py  case.py  company.py  enterprise.py  evaluation.py  job.py  match_result.py  sentiment.py  skill.py  skill_relation.py  user_skill_profile.py
backend/app/prompts/: loader.py
backend/app/prompts/expert/: zero_shot.txt
backend/app/rag/: __init__.py  embeddings.py  retriever.py  vector_store.py
backend/app/services/: __init__.py  dashboard_service.py  evaluation_service.py  jd_service.py  job_service.py  matching_service.py  sentiment_service.py  skill_service.py
backend/scripts/: export_graph.py  init_db.py  seed_data.py  test_new_agents.py
backend/tests/: test_agents.py  test_api.py  test_crawler.py  test_pipeline.py
(+57 files in other folders)
